Fixed the footer clipping through some elements Added the logo to the footer.

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1752,6 +1752,10 @@ select{
   top: 0px;
   bottom: 0px;
 }
+.inset-x-0{
+  left: 0px;
+  right: 0px;
+}
 .bottom-0{
   bottom: 0px;
 }
@@ -1889,6 +1893,9 @@ select{
 .mt-8{
   margin-top: 2rem;
 }
+.mb-10{
+  margin-bottom: 2.5rem;
+}
 .block{
   display: block;
 }
@@ -1968,6 +1975,24 @@ select{
 .h-screen-no-nav{
   height: calc(100vh - 3rem);
   height: calc(var(--screen-height, 100vh) - var(--height-nav));
+}
+.h-12{
+  height: 3rem;
+}
+.h-20{
+  height: 5rem;
+}
+.h-28{
+  height: 7rem;
+}
+.h-32{
+  height: 8rem;
+}
+.h-36{
+  height: 9rem;
+}
+.h-60{
+  height: 15rem;
 }
 .max-h-0{
   max-height: 0px;
@@ -2444,9 +2469,6 @@ select{
 .bg-primary\/5{
   background-color: rgba(2, 6, 23, 0.05);
 }
-.bg-primary_opacity\/5{
-  background-color: rgb(var(#020617) / 0.05);
-}
 .bg-red-100{
   --tw-bg-opacity: 1;
   background-color: rgba(254, 226, 226, var(--tw-bg-opacity));
@@ -2461,6 +2483,15 @@ select{
 .bg-zinc-500{
   --tw-bg-opacity: 1;
   background-color: rgba(113, 113, 122, var(--tw-bg-opacity));
+}
+.bg-primaryOpacity\/5{
+  background-color: rgb(var(#020617) / 0.05);
+}
+.bg-primaryOpacity\/50{
+  background-color: rgb(var(#020617) / 0.5);
+}
+.bg-primaryOpacity\/90{
+  background-color: rgb(var(#020617) / 0.9);
 }
 .bg-opacity-25{
   --tw-bg-opacity: 0.25;
@@ -2483,6 +2514,10 @@ select{
 }
 .bg-center{
   background-position: center;
+}
+.object-contain{
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .object-cover{
   -o-object-fit: cover;
@@ -3265,6 +3300,10 @@ shop-pay-button {
     background-color: transparent;
   }
 
+  .dark\:bg-primaryOpacity\/60{
+    background-color: rgb(var(#020617) / 0.6);
+  }
+
   .dark\:from-contrast\/60{
     --tw-gradient-from: rgb(var(#fafafa) / 0.6) var(--tw-gradient-from-position);
     --tw-gradient-from-position:  ;
@@ -3402,6 +3441,10 @@ shop-pay-button {
 
   .dark\:bg-transparent{
     background-color: transparent;
+  }
+
+  .dark\:bg-primaryOpacity\/60{
+    background-color: rgb(var(#020617) / 0.6);
   }
 
   .dark\:from-contrast\/60{
@@ -3543,6 +3586,10 @@ shop-pay-button {
     background-color: transparent;
   }
 
+  .dark\:bg-primaryOpacity\/60{
+    background-color: rgb(var(#020617) / 0.6);
+  }
+
   .dark\:from-contrast\/60{
     --tw-gradient-from: rgb(var(#fafafa) / 0.6) var(--tw-gradient-from-position);
     --tw-gradient-from-position:  ;
@@ -3680,6 +3727,10 @@ shop-pay-button {
 
   .dark\:bg-transparent{
     background-color: transparent;
+  }
+
+  .dark\:bg-primaryOpacity\/60{
+    background-color: rgb(var(#020617) / 0.6);
   }
 
   .dark\:from-contrast\/60{
@@ -3821,6 +3872,10 @@ shop-pay-button {
     background-color: transparent;
   }
 
+  .dark\:bg-primaryOpacity\/60{
+    background-color: rgb(var(#020617) / 0.6);
+  }
+
   .dark\:from-contrast\/60{
     --tw-gradient-from: rgb(var(#fafafa) / 0.6) var(--tw-gradient-from-position);
     --tw-gradient-from-position:  ;
@@ -3958,6 +4013,10 @@ shop-pay-button {
 
   .dark\:bg-transparent{
     background-color: transparent;
+  }
+
+  .dark\:bg-primaryOpacity\/60{
+    background-color: rgb(var(#020617) / 0.6);
   }
 
   .dark\:from-contrast\/60{
@@ -4099,6 +4158,10 @@ shop-pay-button {
     background-color: transparent;
   }
 
+  .dark\:bg-primaryOpacity\/60{
+    background-color: rgb(var(#020617) / 0.6);
+  }
+
   .dark\:from-contrast\/60{
     --tw-gradient-from: rgb(var(#fafafa) / 0.6) var(--tw-gradient-from-position);
     --tw-gradient-from-position:  ;
@@ -4214,6 +4277,10 @@ shop-pay-button {
 
   .sm\:mt-9{
     margin-top: 2.25rem;
+  }
+
+  .sm\:mr-3{
+    margin-right: 0.75rem;
   }
 
   .sm\:block{
@@ -4420,6 +4487,14 @@ shop-pay-button {
   .md\:h-screen{
     height: 100vh;
     height: var(--screen-height, 100vh);
+  }
+
+  .md\:h-16{
+    height: 4rem;
+  }
+
+  .md\:h-20{
+    height: 5rem;
   }
 
   .md\:max-h-fit{
@@ -4676,6 +4751,18 @@ shop-pay-button {
 
   .lg\:aspect-\[3\/2\]{
     aspect-ratio: 3/2;
+  }
+
+  .lg\:h-36{
+    height: 9rem;
+  }
+
+  .lg\:h-52{
+    height: 13rem;
+  }
+
+  .lg\:h-48{
+    height: 12rem;
   }
 
   .lg\:grid-cols-3{
